# ai_day_planner

./: .gitignore  DEBUGGING_GUIDE.md  README.md  docker-compose.yml
ai-planner-monorepo/: .dockerignore  .gitignore  ARCHITECTURE_REPORT.md  CHECKLIST_PREDEFENSE.md  DEMO_PREDEFENSE.md  DEPLOYMENT_FREE.md  PARSER_EVALUATION.md  PREDEFENSE_USER_REVIEW.md  README.md  TEST_CASES_PREDEFENSE.md  USABILITY_FEEDBACK.md  docker-compose.experimental.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
ai-planner-monorepo/.github/workflows/: ci.yml
ai-planner-monorepo/apps/miniapp-ts/: index.html  package.json  tsconfig.json  vite.config.ts
ai-planner-monorepo/apps/miniapp-ts/src/: App.tsx  api-client.ts  index.tsx  main.tsx  vite-env.d.ts
ai-planner-monorepo/apps/web-platform/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json
ai-planner-monorepo/apps/web-platform/src/: App.tsx  main.tsx  vite-env.d.ts
ai-planner-monorepo/experimental/reports-java/: Dockerfile  pom.xml
ai-planner-monorepo/experimental/scheduler-cpp/: CMakeLists.txt  Dockerfile
ai-planner-monorepo/experimental/scheduler-cpp/src/: main.cpp
ai-planner-monorepo/services/api-python/: .dockerignore  .env.example  Dockerfile  requirements.txt
ai-planner-monorepo/services/api-python/app/: main.py
ai-planner-monorepo/services/bot-js/: .env.example  Dockerfile  package.json
ai-planner-monorepo/services/worker-go/: .dockerignore  .env.example  Dockerfile  go.mod  main.go  main_test.go  test_job.sql
(+65 files in other folders)
